--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                   question: $("#question").val()
               },
               success: function(result) {
-                $("#response").append("<br>Me: "+$("#question").val()+ "<br> Sakura: "+result.response);
+                $("#response").append("<br>Me: "+$("#question").val()+ "<br> GMRE Bot: "+result.response);
                 $("#question").val("")
               },
               error: function(result) {
